Ignore release folder

--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,5 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 
-# Build
-HTML5/
-Windows.zip
+# Release
+Release/
